Fix spacing for landscape on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -214,7 +214,7 @@ footer a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2rem 0;
+    padding: 2rem 1rem;
     gap: 3rem;
 }
 article.content {
